used row flex-column and align-items to center text in mobile mode

--- a/3-homepage.html
+++ b/3-homepage.html
@@ -261,36 +261,40 @@
             <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Free</span>
             <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">membership</span>
           </h3>
-          <div class="row">
-            <div class="col-md-3 justify-content-center">
+          <div class="row px-5">
+            <div class="col-12 col-sm-6 col-md-3 justify-content-center mb-4">
               <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
-              <div class="img-text">
-                <h3>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="row flex-column align-items-center">
+                <h3 class="col-12">Lorem ipsum</h3>
+                <p class="col-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
 
-            <div class="col-md-3 justify-content-center">
+            <div class="col-12 col-sm-6 col-md-3 justify-content-center mb-4">
               <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
-              <div class="img-text">
-                <h3>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <div class="row flex-column align-items-center">
+                <h3 class="col-12">Lorem ipsum</h3>
+                <p class="col-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
 
-            <div class="col-md-3 justify-content-center">
+            <div class="col-12 col-sm-6 col-md-3 justify-content-center mb-4">
               <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
               <div class="img-text">
-                <h3>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="row flex-column align-items-center">
+                  <h3 class="col-12">Lorem ipsum</h3>
+                  <p class="col-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
               </div>
             </div>
 
-            <div class="col-md-3 justify-content-center">
+            <div class="col-12 col-sm-6 col-md-3 justify-content-center mb-4">
               <img src="images/smile_on.png" alt="purple_smile" class="smile_on-area">
               <div class="img-text">
-                <h3>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="row flex-column align-items-center">
+                  <h3 class="col-12">Lorem ipsum</h3>
+                  <p class="col-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </div>
               </div>
             </div>
           </div>
