--- a/0-pricing.html
+++ b/0-pricing.html
@@ -8,13 +8,31 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <header>
-
+    <header class="pricing-header">
+      <div class="col-sm-1">
+        <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+      </div>
+      <div class="col-sm-7">
+        <img src="images/logo.png" alt="logo" class="smile-school">
+      </div>
+      <div class="col-sm container">
+        <a href="#" class="text-white mx-3">COURSES</a>
+        <a href="#" class="text-white mx-3">PRICING</a>
+        <a href="#" class="text-white mx-3">LOGIN</a>
+      </div>
     </header>
     <main>
+      <section class="pricing-hero">
+        <div class="row">
+          <h3>What is</h3>
+          <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+          <img src="images/logo.png" alt="logo" class="smile-school">
+        </div>
+        <h1>Go pro!</h1>
+      </section>
 
     </main>
     <footer>
