using navbar for homepage header now

--- a/homepage.html
+++ b/homepage.html
@@ -15,17 +15,19 @@
   </head>
   <body class="container">
     <header class="container row align-items-center p-3 homepage-header">
-      <div class="col-sm-1">
-        <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-      </div>
-      <div class="col-sm-7">
-        <img src="images/logo.png" alt="logo" class="smile-school">
-      </div>
-      <div class="col-sm container">
-        <a href="#" class="text-white mx-3">COURSES</a>
-        <a href="#" class="text-white mx-3">PRICING</a>
-        <a href="#" class="text-white mx-3">LOGIN</a>
-      </div>
+      <nav class="navbar ">
+        <div class="col-sm-1">
+          <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+        </div>
+        <div class="col-sm-7">
+          <img src="images/logo.png" alt="logo" class="smile-school">
+        </div>
+        <div class="col-sm container">
+          <a href="#" class="text-white mx-3">COURSES</a>
+          <a href="#" class="text-white mx-3">PRICING</a>
+          <a href="#" class="text-white mx-3">LOGIN</a>
+        </div>
+      </nav>
     </header>
     <main>
       <section class="homepage-hero text-white text-center">
