--- a/homepage.html
+++ b/homepage.html
@@ -15,17 +15,17 @@
   </head>
   <body class="container">
     <header class="container row align-items-center p-3 homepage-header">
-      <nav class="navbar ">
-        <div class="col-sm-1">
+      <nav class="navbar navbar-expand-sm">
+        <div class="col-sm-6">
           <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-        </div>
-        <div class="col-sm-7">
           <img src="images/logo.png" alt="logo" class="smile-school">
         </div>
         <div class="col-sm container">
-          <a href="#" class="text-white mx-3">COURSES</a>
-          <a href="#" class="text-white mx-3">PRICING</a>
-          <a href="#" class="text-white mx-3">LOGIN</a>
+          <ul class="navbar-nav">
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">COURSES</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">PRICING</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">LOGIN</a></li>
+          </ul>
         </div>
       </nav>
     </header>
