--- a/homepage.html
+++ b/homepage.html
@@ -20,11 +20,11 @@
           <img src="images/smile_off.png" alt="whiteSmile" class="smile">
           <img src="images/logo.png" alt="logo" class="smile-school">
         </div>
-        <div class="col-sm container">
-          <ul class="navbar-nav">
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">COURSES</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">PRICING</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-3">LOGIN</a></li>
+        <div class="collapse navbar-collapse d-sm-flex col-sm-3 offset-sm-2">
+          <ul class="navbar-nav flex-sm-row font-weight-bold">
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">COURSES</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">LOGIN</a></li>
           </ul>
         </div>
       </nav>
