still have more to add to navbar

--- a/homepage.html
+++ b/homepage.html
@@ -14,18 +14,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <header class="container row align-items-center p-3 homepage-header">
+    <header class="p-3 homepage-header">
       <nav class="navbar navbar-expand-lg justify-content-around">
-        <div class="col-sm-6">
-          <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-          <img src="images/logo.png" alt="logo" class="smile-school">
-        </div>
-        <div class="collapse navbar-collapse d-sm-flex col-sm-3 offset-sm-2">
-          <ul class="navbar-nav flex-sm-row font-weight-bold">
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">COURSES</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
-            <li class="nav-item"><a href="#" class="nav-link text-white mx-2">LOGIN</a></li>
-          </ul>
+        <div class="container-fluid">
+          <div class="col-sm-6">
+            <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+            <img src="images/logo.png" alt="logo" class="smile-school">
+          </div>
+          <div class="collapse navbar-collapse d-sm-flex col-sm-3 offset-sm-2">
+            <ul class="navbar-nav flex-sm-row font-weight-bold">
+              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">COURSES</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">LOGIN</a></li>
+            </ul>
+          </div>
         </div>
       </nav>
     </header>
