--- a/homepage.html
+++ b/homepage.html
@@ -17,12 +17,15 @@
     <header class="p-3 homepage-header">
       <nav class="navbar navbar-expand-lg justify-content-around">
         <div class="container-fluid">
+          <button class="navbar-toggler d-sm-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
+          </button>
           <div class="col-sm-6">
             <img src="images/smile_off.png" alt="whiteSmile" class="smile">
             <img src="images/logo.png" alt="logo" class="smile-school">
           </div>
           <div class="collapse navbar-collapse d-sm-flex col-sm-3 offset-sm-2">
-            <ul class="navbar-nav flex-sm-row font-weight-bold">
+            <ul id="navbarNav" class="navbar-nav flex-sm-row font-weight-bold">
               <li class="nav-item"><a href="#" class="nav-link text-white mx-2">COURSES</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
               <li class="nav-item"><a href="#" class="nav-link text-white mx-2">LOGIN</a></li>
