--- a/homepage.html
+++ b/homepage.html
@@ -29,9 +29,9 @@
           </button>
           <div id="navbarNav" class="collapse navbar-collapse">
             <ul class="navbar-nav">
-              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">COURSES</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
-              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">LOGIN</a></li>
+              <li class="nav-item"><a href="courses.html" class="nav-link text-white mx-2">COURSES</a></li>
+              <li class="nav-item"><a href="pricing.html" class="nav-link text-white mx-2">PRICING</a></li>
+              <li class="nav-item"><a href="#login" class="nav-link text-white mx-2">LOGIN</a></li>
             </ul>
           </div>
         </div>
