made header 100% of width

--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header class="p-3 homepage-header">
-      <div class="container-fluid bg-transparent">
+      <div class="container-fluid bg-transparent navSize">
         <nav class="navbar navbar-expand-sm">
           <div class="col-sm-4">
             <img src="images/smile_off.png" alt="whiteSmile" class="smile">
