added script for navbar but not working

--- a/homepage.html
+++ b/homepage.html
@@ -461,5 +461,14 @@
       </div>
       </div>
     </footer>
+    <!-- navbar toggle -->
+    <script>
+      $(document).ready(function(){
+        $(".navbar-toggler").click(function(){
+          $("#navbarNav").toggleClass("hide");
+        });
+      });
+    </script>
+
   </body>
 </html>
