--- a/homepage.html
+++ b/homepage.html
@@ -39,8 +39,8 @@
     </header>
     <main>
       <section class="homepage-hero text-white text-center">
-        <div class="position-relative container d-flex flex-column align-items-center">
-          <div class="mt-5">
+        <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
+          <div class="mt-5 pt-5">
             <h1 class="display-1 font-weight-bold">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
