improved button colors

--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@
     <header class="p-3 homepage-header">
       <div class="container-fluid bg-transparent navSize">
         <nav class="navbar navbar-expand-sm">
-          <div class="col-sm-4">
+          <div class="offset-sm-1 col-sm-4 col-12">
             <img src="images/smile_off.png" alt="whiteSmile" class="smile">
             <img src="images/logo.png" alt="logo" class="smile-school">
           </div>
@@ -27,7 +27,7 @@
               <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1C0 0.447715 0.447715 0 1 0H19C19.5523 0 20 0.447715 20 1C20 1.55228 19.5523 2 19 2H1C0.447715 2 0 1.55228 0 1ZM0 7C0 6.44772 0.447715 6 1 6H12C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8H1C0.447715 8 0 7.55228 0 7ZM1 12C0.447715 12 0 12.4477 0 13C0 13.5523 0.447716 14 1 14H17C17.5523 14 18 13.5523 18 13C18 12.4477 17.5523 12 17 12H1Z" fill="white"/>
             </svg>
           </button>
-          <div id="navbarNav" class="collapse navbar-collapse offset-sm-4 col-sm-4">
+          <div id="navbarNav" class="collapse navbar-collapse offset-sm-3 col-sm-4 col-12">
             <ul class="navbar-nav">
               <li class="nav-item"><a href="courses.html" class="nav-link text-white mx-2">COURSES</a></li>
               <li class="nav-item"><a href="pricing.html" class="nav-link text-white mx-2">PRICING</a></li>
