--- a/0-homepage.html
+++ b/0-homepage.html
@@ -13,24 +13,33 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-  <body class="container">
-    <header class="container row align-items-center p-3 homepage-header">
-      <div class="col-sm-1">
-        <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-      </div>
-      <div class="col-sm-7">
-        <img src="images/logo.png" alt="logo" class="smile-school">
-      </div>
-      <div class="col-sm container">
-        <a href="#" class="text-white mx-3">COURSES</a>
-        <a href="#" class="text-white mx-3">PRICING</a>
-        <a href="#" class="text-white mx-3">LOGIN</a>
+  <body>
+    <header class="p-3 homepage-header">
+      <div class="container-fluid bg-transparent navSize">
+        <nav class="navbar navbar-expand-sm">
+          <div class="offset-sm-1 col-sm-4 col-12">
+            <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+            <img src="images/logo.png" alt="logo" class="smile-school">
+          </div>
+          <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" viewBox="0 0 20 14" fill="none" class="navbar-toggle-icon">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1C0 0.447715 0.447715 0 1 0H19C19.5523 0 20 0.447715 20 1C20 1.55228 19.5523 2 19 2H1C0.447715 2 0 1.55228 0 1ZM0 7C0 6.44772 0.447715 6 1 6H12C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8H1C0.447715 8 0 7.55228 0 7ZM1 12C0.447715 12 0 12.4477 0 13C0 13.5523 0.447716 14 1 14H17C17.5523 14 18 13.5523 18 13C18 12.4477 17.5523 12 17 12H1Z" fill="white"/>
+            </svg>
+          </button>
+          <div id="navbarNav" class="collapse navbar-collapse offset-sm-3 col-sm-4 col-12">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a href="courses.html" class="nav-link text-white mx-2">COURSES</a></li>
+              <li class="nav-item"><a href="pricing.html" class="nav-link text-white mx-2">PRICING</a></li>
+              <li class="nav-item"><a href="#login" class="nav-link text-white mx-2">LOGIN</a></li>
+            </ul>
+          </div>
+        </nav>
       </div>
     </header>
     <main>
       <section class="homepage-hero text-white text-center">
-        <div class="position-relative container d-flex flex-column align-items-center">
-          <div class="mt-5">
+        <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
+          <div class="mt-5 pt-5">
             <h1 class="display-1 font-weight-bold">Get schooled</h1>
           </div>
           <div class="row justify-content-center">
@@ -44,7 +53,7 @@
             <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
           </h3>
           <div class="position-relative container card-columns text-white row my-5 justify-content-center">
-            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 mt-5 align-items-center text-align-left">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 mt-5 align-items-center">
               <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
               <h3 class="card-title">Phillip Massey</h3>
               <p class="card-text">« Smile of the year » 2018 - 2019</p>
