--- a/1-homepage.html
+++ b/1-homepage.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
-  <body class="container">
+  <body>
     <header class="container row align-items-center p-3 homepage-header">
       <div class="col-sm-1">
         <img src="images/smile_off.png" alt="whiteSmile" class="smile">
