made more adjustments to button focus mode. looks good!

--- a/0-pricing.html
+++ b/0-pricing.html
@@ -27,21 +27,24 @@
           <div id="navbarNav" class="collapse navbar-collapse offset-sm-3 col-sm-4 col-12">
             <ul class="navbar-nav">
               <li class="nav-item"><a href="courses.html" class="nav-link text-white mx-2">COURSES</a></li>
-              <li class="nav-item"><a href="pricing.html" class="nav-link text-white mx-2">PRICING</a></li>
-              <li class="nav-item"><a href="#login" class="nav-link text-white mx-2">LOGIN</a></li>
+              <li class="nav-item"><a href="#" class="nav-link text-white mx-2">PRICING</a></li>
+              <li class="nav-item"><a href="homepage.html" class="nav-link text-white mx-2">LOGIN</a></li>
             </ul>
           </div>
         </nav>
       </div>
     </header>
     <main>
-      <section class="pricing-hero">
-        <div class="row">
-          <h3>What is</h3>
-          <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-          <img src="images/logo.png" alt="logo" class="smile-school">
+      <section class="pricing-hero row flex-column text-white text-center align-items-center">
+        <div class="my-5 py-5">
+          <div class="row">
+            <h3>What is</h3>
+            <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+            <img src="images/logo.png" alt="logo" class="smile-school">
+            <h3>?</h3>
+          </div>
+          <h1>Go pro!</h1>
         </div>
-        <h1>Go pro!</h1>
       </section>
 
     </main>
