fixed spacing in pricing header section

--- a/0-pricing.html
+++ b/0-pricing.html
@@ -37,13 +37,13 @@
     <main>
       <section class="pricing-hero row flex-column text-white text-center align-items-center">
         <div class="my-5 py-5">
-          <div class="row">
+          <div class="row my-5 align-items-center">
             <h3>What is</h3>
-            <img src="images/smile_off.png" alt="whiteSmile" class="smile">
-            <img src="images/logo.png" alt="logo" class="smile-school">
+            <img src="images/smile_off.png" alt="whiteSmile" class="smile mx-2">
+            <img src="images/logo.png" alt="logo" class="smile-school mr-2">
             <h3>?</h3>
           </div>
-          <h1>Go pro!</h1>
+          <h1 class="font-weight-bold ">Go pro!</h1>
         </div>
       </section>
 
