--- a/homepage.html
+++ b/homepage.html
@@ -48,7 +48,7 @@
             <p class="mx-3 font-weight-bold">GRIN</p>
             <p class="mx-3 font-weight-bold">LAUGH</p>
           </div>
-          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          <button class="purple-btn my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
           <h3 class="my-5">
             <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
             <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
