--- a/homepage.html
+++ b/homepage.html
@@ -38,7 +38,7 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white text-center">
+      <section class="homepage-hero purple-btn text-white text-center">
         <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
           <div class="mt-5 pt-5">
             <h1 class="display-1 font-weight-bold">Get schooled</h1>
@@ -48,7 +48,7 @@
             <p class="mx-3 font-weight-bold">GRIN</p>
             <p class="mx-3 font-weight-bold">LAUGH</p>
           </div>
-          <button class="purple-btn my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
           <h3 class="my-5">
             <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
             <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
@@ -265,7 +265,7 @@
 
       </section>
 <!--....... membership section........................ -->
-      <section class="membership text-white">
+      <section class="membership purple-btn text-white">
         <div class="container align-items-center text-center mt-5">
           <h3 class="p-5">
             <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Free</span>
