--- a/1-pricing.html
+++ b/1-pricing.html
@@ -58,6 +58,16 @@
               <p>$1.08/month</p>
             </div>
           </div>
+          <div class="row mt-3">
+            <div class="col-4 col-sm-5 text-left">
+            </div>
+            <div class="col-3 d-sm-none">
+              <p>3 MONTHS</p>
+            </div>
+            <div class="col-3 d-sm-none">
+              <p>1 YEAR</p>
+            </div>
+          </div>
           <div class="row row-divider mt-3">
             <div class="col-4 col-sm-5 text-left">
               <p>Unlimitted access to all tutorials</p>
