fixed margins in mobile mode

--- a/1-pricing.html
+++ b/1-pricing.html
@@ -68,7 +68,7 @@
               <p>1 YEAR</p>
             </div>
           </div>
-          <div class="row row-divider mt-3">
+          <div class="row row-divider mt-3 mx-1">
             <div class="col-4 col-sm-5 text-left">
               <p>Unlimitted access to all tutorials</p>
             </div>
@@ -83,7 +83,7 @@
               </svg>
             </div>
           </div>
-          <div class="row row-divider mt-3">
+          <div class="row row-divider mt-3 mx-1">
             <div class="col-4 col-sm-5 text-left">
               <p>Access SmileSchool private forum</p>
             </div>
@@ -98,7 +98,7 @@
               </svg>
             </div>
           </div>
-          <div class="row row-divider mt-3">
+          <div class="row row-divider mt-3 mx-1">
             <div class="col-4 col-sm-5 text-left">
               <p>Access Smiles contests & Smiles Analysis</p>
             </div>
@@ -113,7 +113,7 @@
               </svg>
             </div>
           </div>
-          <div class="row row-divider mt-3">
+          <div class="row row-divider mt-3 mx-1">
             <div class="col-4 col-sm-5 text-left">
               <p>Get a free toothbrush</p>
             </div>
@@ -126,7 +126,7 @@
               </svg>
             </div>
           </div>
-          <div class="row mt-3">
+          <div class="row mt-3 mx-1">
             <div class="col-4 col-sm-5 text-left">
               <img src="images/signal.png" alt="signal">
             </div>
@@ -139,7 +139,7 @@
               </svg>
             </div>
           </div>
-          <div class="row">
+          <div class="row mx-1">
             <div class="col-4 col-sm-5 text-left">
               <p>Exclusive discount on all Signal products</p>
             </div>
