fixed weather name background

--- a/homepage.html
+++ b/homepage.html
@@ -89,7 +89,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
@@ -102,7 +102,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
@@ -115,7 +115,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
