took off extra container on weather section

--- a/homepage.html
+++ b/homepage.html
@@ -78,7 +78,7 @@
         </div>
       </section>
 <!-- weather section.......................................................... -->
-      <section class="container weather text-white">
+      <section class="weather text-white">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <!-- first carousel item -->
