added weather section to pricing

--- a/1-homepage.html
+++ b/1-homepage.html
@@ -67,7 +67,7 @@
           </div>
         </div>
       </section>
-      <section class="container weather text-white">
+      <section class="weather text-white">
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <!-- first carousel item -->
@@ -78,7 +78,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
@@ -91,7 +91,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
@@ -104,7 +104,7 @@
                 </div>
                 <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
                   <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
-                  <footer class="blockquote-footer text-white">Person Name</footer>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
                   <cite title="weather presenter">weather presenter</cite>
                 </blockquote>
               </div>
