--- a/2-pricing.html
+++ b/2-pricing.html
@@ -146,6 +146,66 @@
           </div>
         </div>
       </section>
+      <!-- weather quote section -->
+      <section class="weather text-white">
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+          <div class="carousel-inner">
+            <!-- first carousel item -->
+            <div class="carousel-item active">
+              <div class="container row align-items-center my-5 justify-content-center">
+                <div class="col-1 col-sm-2 col-m-2 offset-lg-1 mr-5">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
+            <!-- second item -->
+            <div class="carousel-item">
+              <div class="container row align-items-center my-5 justify-content-center">
+                <div class="col-1 col-sm-2 col-m-2 offset-lg-1 mr-5">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
+            <!-- third item -->
+            <div class="carousel-item">
+              <div class="container row align-items-center my-5 justify-content-center">
+                <div class="col-1 col-sm-2 col-m-2 offset-lg-1 mr-5">
+                  <img src="images/profile_5.jpg" alt="weather" class="rounded-circle small-img">
+                </div>
+                <blockquote class="blockquote col-sm-5 col-lg-7 mt-5 ml-5">
+                  <p>« Those tutorials are concise and go straight to the point. I can’t think of a better place to learn smiling. And it’s so fun!</p>
+                  <footer class="blockquote-footer text-white bg-transparent">Person Name</footer>
+                  <cite title="weather presenter">weather presenter</cite>
+                </blockquote>
+              </div>
+            </div>
+          </div>
+
+          <!-- Carousel controls -->
+          <a href="#myCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <img src="images/arrow_white_left.png" alt="left" aria-hidden="true">
+            <span class="sr-only">Previous</span>
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span> -->
+          </a>
+          <a href="#myCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <img src="images/arrow_white_right.png" alt="right" aria-hidden="true">
+            <span class="sr-only">Next</span>
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span> -->
+          </a>
+        </div>
+      </section>
 
     </main>
     <footer>
