--- a/0-courses.html
+++ b/0-courses.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1. shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coiny&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
@@ -11,11 +14,68 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   </head>
   <body>
-    <header>
-
+    <header class="p-3 homepage-header">
+      <div class="container-fluid bg-transparent navSize">
+        <nav class="navbar navbar-expand-sm">
+          <div class="offset-sm-1 col-sm-4 col-12">
+            <img src="images/smile_off.png" alt="whiteSmile" class="smile">
+            <img src="images/logo.png" alt="logo" class="smile-school">
+          </div>
+          <button class="navbar-toggler float-left position-absolute d-sm-none" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="14" viewBox="0 0 20 14" fill="none" class="navbar-toggle-icon">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1C0 0.447715 0.447715 0 1 0H19C19.5523 0 20 0.447715 20 1C20 1.55228 19.5523 2 19 2H1C0.447715 2 0 1.55228 0 1ZM0 7C0 6.44772 0.447715 6 1 6H12C12.5523 6 13 6.44772 13 7C13 7.55228 12.5523 8 12 8H1C0.447715 8 0 7.55228 0 7ZM1 12C0.447715 12 0 12.4477 0 13C0 13.5523 0.447716 14 1 14H17C17.5523 14 18 13.5523 18 13C18 12.4477 17.5523 12 17 12H1Z" fill="white"/>
+            </svg>
+          </button>
+          <div id="navbarNav" class="collapse navbar-collapse offset-sm-3 col-sm-4 col-12">
+            <ul class="navbar-nav">
+              <li class="nav-item"><a href="courses.html" class="nav-link text-white mx-2">COURSES</a></li>
+              <li class="nav-item"><a href="pricing.html" class="nav-link text-white mx-2">PRICING</a></li>
+              <li class="nav-item"><a href="#login" class="nav-link text-white mx-2">LOGIN</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <main>
-
+      <section class="homepage-hero purple-btn text-white text-center">
+        <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
+          <div class="mt-5 pt-5">
+            <h1 class="display-1 font-weight-bold">Get schooled</h1>
+          </div>
+          <div class="row justify-content-center">
+            <p class="mx-3 font-weight-bold">SMILES</p>
+            <p class="mx-3 font-weight-bold">GRIN</p>
+            <p class="mx-3 font-weight-bold">LAUGH</p>
+          </div>
+          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
+          <h3 class="my-5">
+            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
+          </h3>
+          <div class="position-relative container card-columns text-white row my-5 justify-content-center">
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 mt-5 align-items-center">
+              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
+              <h3 class="card-title">Phillip Massey</h3>
+              <p class="card-text">« Smile of the year » 2018 - 2019</p>
+            </div>
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
+              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
+              <h3 class="card-title">Nannie Lawrence</h3>
+              <p class="card-text">Best « little smile » 2017</p>
+            </div>
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
+              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
+              <h3 class="card-title">Bruce Walters</h3>
+              <p class="card-text">Best « Friend Smile » live performance 2019</p>
+            </div>
+            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
+              <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
+              <h3 class="card-title">Henry Hughes</h3>
+              <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
 
