--- a/0-homepage.html
+++ b/0-homepage.html
@@ -37,7 +37,7 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero text-white text-center">
+      <section class="homepage-hero purple-btn text-white text-center">
         <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
           <div class="mt-5 pt-5">
             <h1 class="display-1 font-weight-bold">Get schooled</h1>
@@ -75,8 +75,7 @@
             </div>
           </div>
         </div>
-      </section>
-    </main>
+      </section>    </main>
     <footer>
 
     </footer>
