--- a/0-courses.html
+++ b/0-courses.html
@@ -37,43 +37,13 @@
       </div>
     </header>
     <main>
-      <section class="homepage-hero purple-btn text-white text-center">
+      <section class="courses-hero purple-btn text-white text-center">
         <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
-          <div class="mt-5 pt-5">
-            <h1 class="display-1 font-weight-bold">Get schooled</h1>
-          </div>
-          <div class="row justify-content-center">
-            <p class="mx-3 font-weight-bold">SMILES</p>
-            <p class="mx-3 font-weight-bold">GRIN</p>
-            <p class="mx-3 font-weight-bold">LAUGH</p>
-          </div>
-          <button class="my-5 btn btn-success rounded-pill text-white">REGISTER FOR FREE</button>
-          <h3 class="my-5">
-            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Learn</span>
-            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">from the pros</span>
-          </h3>
-          <div class="position-relative container card-columns text-white row my-5 justify-content-center">
-            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 mt-5 align-items-center">
-              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle small-img">
-              <h3 class="card-title">Phillip Massey</h3>
-              <p class="card-text">« Smile of the year » 2018 - 2019</p>
-            </div>
-            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
-              <img src="images/profile_2.jpg" alt="nannie" class="card-img-top rounded-circle small-img">
-              <h3 class="card-title">Nannie Lawrence</h3>
-              <p class="card-text">Best « little smile » 2017</p>
-            </div>
-            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
-              <img src="images/profile_3.jpg" alt="bruce" class="card-img-top rounded-circle small-img">
-              <h3 class="card-title">Bruce Walters</h3>
-              <p class="card-text">Best « Friend Smile » live performance 2019</p>
-            </div>
-            <div class="col-12 col-sm-5 col-md-2 card bg-transparent border-0 my-5 align-items-center">
-              <img src="images/profile_4.jpg" alt="henry" class="card-img-top rounded-circle small-img">
-              <h3 class="card-title">Henry Hughes</h3>
-              <p class="card-text">« 24h smiles » winner 2016 - 2019</p>
-            </div>
-          </div>
+          <h1 class="my-5">
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">« Don’t cry because it’s over.</span>
+            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Smile</span>
+            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">because it happened. »</span>
+          </h1>
         </div>
       </section>
     </main>
