added formatting for courses h1 and made it disappear in mobile mode only using d-none and d-sm-block

--- a/0-courses.html
+++ b/0-courses.html
@@ -39,10 +39,10 @@
     <main>
       <section class="courses-hero purple-btn text-white text-center">
         <div class="position-relative container d-flex flex-column align-items-center mt-5 pt-5">
-          <h1 class="my-5">
-            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">« Don’t cry because it’s over.</span>
-            <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">Smile</span>
-            <span class="font-weight-light" style="color: #FFF; opacity: 0.9; font-size: 2rem">because it happened. »</span>
+          <h1 class="my-5 d-none d-sm-block">
+            <span class="font-weight-light" style="font-family: Coiny; color: #FFF; opacity: 0.9; font-size: 2rem">« Don’t cry because it’s over.</span>
+            <span class="font-weight-bold" style="font-family: Coiny; color: #C271FF; font-size: 2rem">Smile</span>
+            <span class="font-weight-light" style="font-family: Coiny; color: #FFF; opacity: 0.9; font-size: 2rem">because it happened. »</span>
           </h1>
         </div>
       </section>
