--- a/1-courses.html
+++ b/1-courses.html
@@ -51,19 +51,18 @@
           <form class="row p-5">
             <div class="form-group col-12 col-md-4 text-left">
               <label for="Keywords">Keywords</label>
-              <div class="input-group">
+              <div class="input-group input-bg">
                 <!-- <i class="fas fa-search text-dark"></i> -->
                 <input type="text" class="form-control" placeholder="Search by keywords" aria-label="Keywords" id="Keywords">
               </div>
             </div>
             <div class="form-group col-12 col-md-4 text-left">
               <label for="Topic">Topic</label>
-              <div class="custom-select" id="Topic">
-                <option selected class="text-white">Novice</option>
+              <select class="custom-select input-bg" id="Topic">
                 <option value="1">Novice</option>
                 <option value="2">Intermediate</option>
                 <option value="3">Expert</option>
-              </div>
+              </select>
             </div>
           </form>
         </div>
