--- a/1-courses.html
+++ b/1-courses.html
@@ -64,6 +64,14 @@
                 <option value="3">Expert</option>
               </select>
             </div>
+            <div class="form-group col-12 col-md-4 text-left">
+              <label for="sort">Sort By</label>
+              <select class="custom-select input-bg" id="sort">
+                <option value="1">Most Popular</option>
+                <option value="2">Most Recent</option>
+                <option value="3">Most Viewed</option>
+              </select>
+            </div>
           </form>
         </div>
 
