--- a/1-courses.html
+++ b/1-courses.html
@@ -56,7 +56,7 @@
                 <input type="text" class="form-control" placeholder="Search by keywords" aria-label="Keywords" id="Keywords">
               </div>
             </div>
-            <div class="form-group col-12 col-md-4 text-left">
+            <div class="form-group col-12 col-sm-6 col-md-4 text-left">
               <label for="Topic">Topic</label>
               <select class="custom-select input-bg" id="Topic">
                 <option value="1">Novice</option>
@@ -64,7 +64,7 @@
                 <option value="3">Expert</option>
               </select>
             </div>
-            <div class="form-group col-12 col-md-4 text-left">
+            <div class="form-group col-12 col-sm-6 col-md-4 text-left">
               <label for="sort">Sort By</label>
               <select class="custom-select input-bg" id="sort">
                 <option value="1">Most Popular</option>
