added margin top for mobile mode only.

--- a/1-courses.html
+++ b/1-courses.html
@@ -47,7 +47,7 @@
           </h1>
         </div>
         <!-- form -->
-        <div class="form-bg">
+        <div class="form-bg mt-5 mt-sm-0">
           <form class="row p-5">
             <div class="form-group col-12 col-md-4 text-left">
               <label for="Keywords">Keywords</label>
