--- a/homepage.html
+++ b/homepage.html
@@ -138,10 +138,10 @@
         </div>
       </section>
 <!-- video section .............................................................-->
-      <section class="video container text-center">
+      <section class="video text-center">
         <h3 class="my-5 font-weight-light" style="opacity: 0.9; font-size: 2rem">Most <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">popular</span>
           tutorials</h3>
-        <div class="container mb-5">
+        <div class="mb-5">
           <div class="row">
             <div>
               <div id="videoCarousel" class="carousel slide" data-ride="carousel">
