set max width for lorem ipsum p

--- a/homepage.html
+++ b/homepage.html
@@ -149,10 +149,11 @@
                 <div class="carousel-inner">
                   <!-- first carousel item -->
                   <div class="carousel-item active">
-                    <div class="row justify-content-center text-left">
+                    <div class="row justify-content-center align-items-center text-left">
                       <div class="col-12 col-sm-6 col-md-2">
                         <div class="single-box">
-                          <div class="img-area"><img src="images/thumbnail_1.jpg" alt=""></div>
+                          <div class="img-area">
+                            <img src="images/thumbnail_1.jpg" alt=""></div>
                           <div class="img-text">
                             <h3 class="">Natural Smile</h3>
                             <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
