took out extra divs runnin round doin nothin

--- a/homepage.html
+++ b/homepage.html
@@ -139,131 +139,128 @@
       </section>
 <!-- video section .............................................................-->
       <section class="video text-center">
-        <h3 class="my-5 font-weight-light" style="opacity: 0.9; font-size: 2rem">Most <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">popular</span>
-          tutorials</h3>
-        <div class="mb-5">
-          <div class="row">
-            <div>
-              <div id="videoCarousel" class="carousel slide" data-ride="carousel">
-                <!-- inner carousel -->
-                <div class="carousel-inner">
-                  <!-- first carousel item -->
-                  <div class="carousel-item active">
-                    <div class="row justify-content-center align-items-center text-left">
-                      <div class="col-12 col-sm-6 col-md-2">
-                        <div class="single-box">
-                          <div class="img-area">
-                            <img src="images/thumbnail_1.jpg" alt=""></div>
-                          <div class="img-text">
-                            <h3 class="">Natural Smile</h3>
-                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                            <div class="row align-items-center justify-content-around">
-                              <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
-                              <h3 class="card-title text-purple">Phillip Massey</h3>
-                            </div>
-                            <div class="row justify-content-around">
-                              <div>
-                                <img src="images/star_on.png" alt="star_on" class="small-star">
-                                <img src="images/star_on.png" alt="star_on" class="small-star">
-                                <img src="images/star_on.png" alt="star_on" class="small-star">
-                                <img src="images/star_on.png" alt="star_on" class="small-star">
-                                <img src="images/star_off.png" alt="star_off" class="small-star">
-                              </div>
-                              <p class="text-purple">8 min</p>
-                            </div>
-                          </div>
-                        </div>
+        <h3 class="my-5 font-weight-light" style="opacity: 0.9; font-size: 2rem">
+          Most <span class="font-weight-bold" style="color: #C271FF; font-size: 2rem">
+            popular
+          </span>
+          tutorials
+        </h3>
+        <div id="videoCarousel" class="carousel slide" data-ride="carousel">
+          <!-- inner carousel -->
+          <div class="carousel-inner">
+            <!-- first carousel item -->
+            <div class="carousel-item active">
+              <div class="row justify-content-center align-items-center text-left">
+                <div class="col-12 col-sm-6 col-md-2">
+                  <div class="single-box">
+                    <div class="img-area">
+                      <img src="images/thumbnail_1.jpg" alt=""></div>
+                    <div class="img-text">
+                      <h3 class="">Natural Smile</h3>
+                      <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                      <div class="row align-items-center justify-content-around">
+                        <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                        <h3 class="card-title text-purple">Phillip Massey</h3>
                       </div>
-                      <div class="col-12 col-sm-6 col-md-2 d-none d-sm-block">
-
-                          <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
-                          <div class="img-text">
-                            <h3>Happy Smile</h3>
-                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                          </div>
-                          <div class="row align-items-center justify-content-around">
-                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
-                            <h3 class="card-title text-purple">Phillip Massey</h3>
-                          </div>
-                          <div class="row justify-content-around">
-                            <div>
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_off.png" alt="star_off" class="small-star">
-                            </div>
-                            <p class="text-purple">8 min</p>
-                          </div>
-
-                      </div>
-                      <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
-                        <div class="single-box">
-                          <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
-                          <div class="img-text">
-                            <h3>Sad Smile</h3>
-                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                          </div>
-                          <div class="row align-items-center justify-content-around">
-                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
-                            <h3 class="card-title text-purple">Phillip Massey</h3>
-                          </div>
-                          <div class="row justify-content-around">
-                            <div>
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_off.png" alt="star_off" class="small-star">
-                            </div>
-                            <p class="text-purple">8 min</p>
-                          </div>
-
+                      <div class="row justify-content-around">
+                        <div>
+                          <img src="images/star_on.png" alt="star_on" class="small-star">
+                          <img src="images/star_on.png" alt="star_on" class="small-star">
+                          <img src="images/star_on.png" alt="star_on" class="small-star">
+                          <img src="images/star_on.png" alt="star_on" class="small-star">
+                          <img src="images/star_off.png" alt="star_off" class="small-star">
                         </div>
-                      </div>
-                      <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
-                        <div class="single-box">
-                          <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
-                          <div class="img-text">
-                            <h3>Diagonal Smile</h2>
-                            <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-                          </div>
-                          <div class="row align-items-center justify-content-around">
-                            <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
-                            <h3 class="card-title text-purple">Phillip Massey</h3>
-                          </div>
-                          <div class="row justify-content-around">
-                            <div>
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_on.png" alt="star_on" class="small-star">
-                              <img src="images/star_off.png" alt="star_off" class="small-star">
-                            </div>
-                            <p class="text-purple">8 min</p>
-                          </div>
-
-                        </div>
+                        <p class="text-purple">8 min</p>
                       </div>
                     </div>
                   </div>
                 </div>
-                <!-- carousel control -->
-                <a href="#videoCarousel" class="carousel-control-prev" role="button" data-slide="prev">
-                  <img src="images/arrow_black_left.png" alt="left">
-                  <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span> -->
-                </a>
-                <a href="#videoCarousel" class="carousel-control-next" role="button" data-slide="next">
-                  <img src="images/arrow_black_right.png" alt="right">
-                  <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span> -->
-                </a>
+                <div class="col-12 col-sm-6 col-md-2 d-none d-sm-block">
+
+                    <div class="img-area"><img src="images/thumbnail_2.jpg" alt=""></div>
+                    <div class="img-text">
+                      <h3>Happy Smile</h3>
+                      <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    </div>
+                    <div class="row align-items-center justify-content-around">
+                      <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                      <h3 class="card-title text-purple">Phillip Massey</h3>
+                    </div>
+                    <div class="row justify-content-around">
+                      <div>
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_off.png" alt="star_off" class="small-star">
+                      </div>
+                      <p class="text-purple">8 min</p>
+                    </div>
+
+                </div>
+                <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
+                  <div class="single-box">
+                    <div class="img-area"><img src="images/thumbnail_3.jpg" alt=""></div>
+                    <div class="img-text">
+                      <h3>Sad Smile</h3>
+                      <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    </div>
+                    <div class="row align-items-center justify-content-around">
+                      <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                      <h3 class="card-title text-purple">Phillip Massey</h3>
+                    </div>
+                    <div class="row justify-content-around">
+                      <div>
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_off.png" alt="star_off" class="small-star">
+                      </div>
+                      <p class="text-purple">8 min</p>
+                    </div>
+
+                  </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-2 d-none d-md-block">
+                  <div class="single-box">
+                    <div class="img-area"><img src="images/thumbnail_4.jpg" alt=""></div>
+                    <div class="img-text">
+                      <h3>Diagonal Smile</h2>
+                      <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+                    </div>
+                    <div class="row align-items-center justify-content-around">
+                      <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                      <h3 class="card-title text-purple">Phillip Massey</h3>
+                    </div>
+                    <div class="row justify-content-around">
+                      <div>
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_on.png" alt="star_on" class="small-star">
+                        <img src="images/star_off.png" alt="star_off" class="small-star">
+                      </div>
+                      <p class="text-purple">8 min</p>
+                    </div>
+
+                  </div>
+                </div>
               </div>
             </div>
           </div>
+          <!-- carousel control -->
+          <a href="#videoCarousel" class="carousel-control-prev" role="button" data-slide="prev">
+            <img src="images/arrow_black_left.png" alt="left">
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span> -->
+          </a>
+          <a href="#videoCarousel" class="carousel-control-next" role="button" data-slide="next">
+            <img src="images/arrow_black_right.png" alt="right">
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span> -->
+          </a>
         </div>
-
       </section>
 <!--....... membership section........................ -->
       <section class="membership purple-btn text-white">
