made image a column

--- a/2-courses.html
+++ b/2-courses.html
@@ -76,20 +76,22 @@
         </div>
       </section>
 <!--.............. results section................................. -->
-      <section class="results video">
+      <section class="results video m-4">
+        <p>11 videos</p>
         <div class="row">
-          <div class="card">
-            <div class="img-area">
-              <img src="images/thumbnail_1.jpg" alt=""></div>
+          <div class="card m-3">
             <div class="img-text">
-              <h3 class="">Natural Smile</h3>
-              <p>Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
-              <div class="row align-items-center justify-content-around">
-                <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+              <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+              <h3 class="ml-3 mt-2">Natural Smile</h3>
+              <p class="ml-3">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
+              <div class="row align-items-center">
+                <div class="col-2 ml-3">
+                  <img src="images/profile_1.jpg" alt="phillip" class="card-img-top rounded-circle xs-img">
+                </div>
                 <h3 class="card-title text-purple">Phillip Massey</h3>
               </div>
-              <div class="row justify-content-around">
-                <div>
+              <div class="row">
+                <div class="col-8 ml-3">
                   <img src="images/star_on.png" alt="star_on" class="small-star">
                   <img src="images/star_on.png" alt="star_on" class="small-star">
                   <img src="images/star_on.png" alt="star_on" class="small-star">
