added play button!

--- a/2-courses.html
+++ b/2-courses.html
@@ -81,7 +81,10 @@
         <div class="row">
           <div class="card m-3">
             <div class="img-text">
-              <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+              <div class="image-container">
+                <img src="images/thumbnail_1.jpg" alt="natural" class="col-12">
+                <img src="images/play.png" alt="play" class="position-absolute play-button">
+              </div>
               <h3 class="ml-3 mt-2">Natural Smile</h3>
               <p class="ml-3">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
               <div class="row align-items-center">
